--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "env-cmd -f .env.local nodemon index.js",
-    "build": "env-cmd -f .env.local react-scripts build"
+    "start": "nodemon index.js",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +15,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
